maybe express will solve our problems

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "d3": "^6.2.0",
     "datamaps": "^0.5.9",
+    "express": "^4.17.1",
     "tail": "^2.0.4",
     "topojson": "^3.0.2",
     "topojson-client": "^3.1.0",
