--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/notedwin/attack-map#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "d3": "^6.2.0",
     "datamaps": "^0.5.9",
     "express": "^4.17.1",
+    "log4js": "^6.3.0",
     "tail": "^2.0.4",
     "topojson": "^3.0.2",
     "topojson-client": "^3.1.0",
