--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.5",
     "d3": "^6.5.0",
     "datamaps": "^0.5.9",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
     "tail": "^2.0.4",
