--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "d3": "^6.5.0",
     "datamaps": "^0.5.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
     "tail": "^2.0.4",
