--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/notedwin/attack-map#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.5",
     "d3": "^6.5.0",
     "datamaps": "^0.5.9",
@@ -26,6 +27,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
+    "mongodb": "^3.6.6",
+    "redis": "^3.1.2",
+    "sequelize": "^6.6.2",
     "tail": "^2.0.4",
     "topojson": "^3.0.2",
     "topojson-client": "^3.1.0",
