remove timeout or else database won't be populated

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "globe.gl": "^2.21.2",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.6",
     "redis": "^3.1.2",
